<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Netflixbmc Client</string>
    
    <string name="settings_label">Host Details</string>
    <string name="settings_title">Host Details</string>
    <string name="settings_shortcut">s</string>
    
    <string name="host_url_title">Url</string>
    <string name="host_url_summary">Host Url</string>
    
    <string name="username_title">Username</string>
    <string name="username_summary">JsonRpc Username</string>
    
    <string name="password_title">Password</string>
    <string name="password_summary">JsonRpc Password</string>
    
    <string name="pref_host_url">url</string>
    <string name="pref_username">username</string>
    <string name="pref_password">password</string>
    
    <string name="missing_connection_details">Missing Connection Details</string>
    <string name="please_wait">Please Wait...</string>
    <string name="loading">Loading...</string>
    
    <color name="background">#AA95B1CF</color>
</resources>